# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
task_manager/: settings.py  urls.py
task_manager/tasks/: urls.py  views.py
task_manager/templates/: index.html
