[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tanuki <tanuki.evil@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
